# kns_rag

./: .gitignore  CLAUDE.md  DOWNSTREAM.md  INFO.md  README.md  config.yaml  pyproject.toml  run_llm_generation.ps1
.claude/: settings.json  settings.local.json
.github/workflows/: tests.yml
config/: config.yaml
docs/: LLM_GENERATION_AND_JUDGE.md  LLM_ONLY_AND_STRICT_JUDGE.md
notebooks/: 01_pdf_table_inspection.ipynb
scripts/: 01_build_corpus.py  03_build_index.py  04_retrieve.py  05_build_rag_inputs.py  06_eval_retrieval.py  07_generate_answers.py  07_generate_llm_only.py  08_eval_answers.py  08_eval_llm_judge.py  build_chunks.py  build_corpus.py  build_index.py  build_qa_smoke.py  build_rag_inputs.py  eval_retrieval.py  pilot_semantic_vs_structure.py  qa_smoke.py  retrieve.py  run_pipeline.py
src/chunking/: base.py  strategies.py
src/kns_rag/: config.py  corpus.py  downstream.py  embeddings.py  evaluation.py  io.py  judging.py  layout.py  llm.py  llm_client.py  parse.py  prompts.py  retrieval.py  strict_judge.py  text.py
src/kns_rag/chunking/: strategies.py
src/kns_rag/preprocessing/: extract_sections.py
src/preprocessing/: extract_sections.py
src/span_index/: __init__.py
tests/: test_downstream.py  test_llm_evaluation.py  test_strict_judge.py  test_token_budget.py
