[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kns-rag"
version = "0.1.0"
description = "Chunking-strategy comparison for RAG over NUREG-1431 STS (KNS conference experiment)"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber",
    "pyyaml",
]

[project.optional-dependencies]
# dense retrieval / semantic chunking (03_build_index, 04_retrieve, semantic strategy)
retrieval = [
    "numpy",
    "sentence-transformers",
]
# local Hugging Face generator/judge (07_generate_answers, 08_eval_answers)
# openai_compatible mode uses the standard library and does not require this extra.
generation = [
    "torch",
    "transformers",
    "accelerate",
]
all = [
    "numpy",
    "sentence-transformers",
    "torch",
    "transformers",
    "accelerate",
]

[tool.setuptools.packages.find]
where = ["src"]
